Fix pdf-display creating bad whitespace. Add loading cover

--- a/src/components/pdf-display.component/styles.module.scss
+++ b/src/components/pdf-display.component/styles.module.scss
@@ -23,9 +23,24 @@
 }
 
 .sourceContainer {
-	display: inline-block;
+	display: flex;
 	box-shadow:
 		0px 3px 3px -2px rgba(0,0,0,0.2),
 		0px 3px 4px 0px rgba(0,0,0,0.14),
 		0px 1px 8px 0px rgba(0,0,0,0.12);
+}
+
+.loadingCover {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--brand);
+	color: var(--on-brand);
+	text-align: center;
+	font-weight: bold;
+
+	h1 {
+		margin: 0;
+		padding: 0;
+	}
 }
